# XMLCit

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/: __init__.py
src/VIAF_functions/: VIAFreffun.py  __init__.py
src/VIAFfunctions/: VIAFreffun.py
src/XMLCit/: addtagfunc.py  functions.py  tagfunctions.py
src/XMLCit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/opcit_functions/: Ibidfunc.py  __init__.py
src/opcitfunctions/: Ibidfunc.py
