[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "XMLCit"
version = "0.0.5"
authors = [
  { name="Jose Hernandez", email="jose.hndz.prz@gmail.com" },
]
description = "This package was made to edit XML files ( particularly TEI-XML files). The main purpose is to facilitate the tagging and edit of repeated citations; and the inclusion of VIAF records "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]