[metadata]
name = XMLCit
version = 0.0.8
author = Jose Hernandez
author_email = jose.hndz.prz@gmail.com
description = This package was made to edit XML files ( particularly TEI-XML files). The main purpose is to facilitate the tagging and edit of repeated citations and the inclusion of VIAF records 
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/hernandezj1/XMLCit

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src